yamls/http-backend-bar-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-backend-bar-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http
      version: bar
  template:
    metadata:
      labels:
        app: http
        version: bar
    spec:
      containers:
      - image: docker.io/ccieliu/mesh-demo
        imagePullPolicy: IfNotPresent
        name: mesh-demo
        ports:
        - containerPort: 5000
        command: ['python3']
        args: ["/data/http-backend.py"]
