yamls/web-app-foo-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-foo-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
      version: foo
  template:
    metadata:
      labels:
        app: web-app
        version: foo
    spec:
      containers:
      - image: docker.io/ccieliu/mesh-demo
        imagePullPolicy: IfNotPresent
        name: mesh-demo
        ports:
        - containerPort: 5000
        command: ['python3']
        args: ["/data/web-app.py"]
