yamls/grpc-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-backend-svc
  labels:
    app: grpc
    service: grpc-svc
spec:
  ports:
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: grpc
