yamls/http-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-backend-svc
  labels:
    app: http
    service: http-svc
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 5000
  selector:
    app: http
