yamls/web-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  labels:
    app: web-app
    service: web-app-svc
spec:
  ports:
  - name: web-app
    port: 8000
    targetPort: 5000
  selector:
    app: web-app
