yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
spec:
  ingressClassName: apisix
  rules:
  - host: foo.mesh.lab
    http:
      paths:
      - backend:
          service:
            name: web-app-foo-svc
            port:
              number: 8000
        path: /
        pathType: Prefix
